@@ -2,6 +2,7 @@ package com.scalefocus.blogapp.service;
 
 import com.scalefocus.blogapp.entity.PostEntity;
 import com.scalefocus.blogapp.entity.TagEntity;
+import com.scalefocus.blogapp.model.CreatePostResponse;
 import com.scalefocus.blogapp.model.GetPostsByTagResponse;
 import com.scalefocus.blogapp.model.GetPostsResponse;
 import com.scalefocus.blogapp.model.UpdatePostResponse;
@@ -26,18 +27,14 @@ public class PostServiceImpl implements PostService {
     private final TagRepository tagRepository;
 
     @Override
-    public Optional<PostEntity> create(PostEntity postEntity) {
-
-        return Optional
-                .of(postRepository
-                        .save(postEntity));
+    public CreatePostResponse create(PostEntity postEntity) {
+        PostEntity save = postRepository.save(postEntity);
+        return new CreatePostResponse(save.getId());
     }
 
     @Override
     public List<GetPostsResponse> getAll() {
-
         final List<PostEntity> allPosts = postRepository.findAll();
-
         return allPosts.stream()
                 .map(post -> new GetPostsResponse(
                         post.getTitle(),
@@ -45,13 +42,11 @@ public class PostServiceImpl implements PostService {
                                 .substring(0, post.getText().length() / 2)
                                 .trim()
                                 .concat(ELLIPSIS)))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Optional<UpdatePostResponse> update(PostEntity postEntity, Long id) {
-
-
+    public UpdatePostResponse update(PostEntity postEntity, Long id) {
         return postRepository.findById(id)
                 .map(post -> {
                     post.setTitle(postEntity.getTitle());
@@ -61,19 +56,30 @@ public class PostServiceImpl implements PostService {
 
                     return new UpdatePostResponse(updatedPost.getTitle(), updatedPost.getText());
 
-                });
+                }).orElse(null);
     }
 
     @Override
-    public List<GetPostsByTagResponse> getAllByTag(String tag) {
+    public PostEntity save(PostEntity postEntity) {
+        return postRepository.save(postEntity);
+    }
+
+    @Override
+    public Optional<PostEntity> findById(Long id) {
+        return postRepository.findById(id);
+    }
+
+    @Override
+    public List<GetPostsByTagResponse> findAllByTag(String tag) {
 
         Optional<TagEntity> tagEntity = tagRepository.findByTag(tag);
 
         if (tagEntity.isEmpty()) {
-            return List.of();
+            return null;
         }
 
         List<PostEntity> allByTag = postRepository.findAllByTags(Set.of(tagEntity.get()));
+
 
         return allByTag.stream().map(post ->
                 new GetPostsByTagResponse(
@@ -86,14 +92,8 @@ public class PostServiceImpl implements PostService {
                                 .stream()
                                 .map(TagEntity::getTag)
                                 .collect(Collectors.toSet())
-                )).toList();
+                )).collect(Collectors.toList());
 
     }
-
-    @Override
-    public Optional<PostEntity> findById(Long id) {
-        return postRepository.findById(id);
-    }
-
 
 }
